force-app/main/default/objects/B25__Stored_Filter_Set_Values__c/B25__Stored_Filter_Set_Values__c.object-meta.xml
<CustomObject>
    <description>Stores individual users&apos; overridden values for global filters.</description>
    <label>Stored Filter Set Values</label>
    <nameField>
        <displayFormat>SFSV-{0000}</displayFormat>
        <label>Stored Filter Set Values Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stored Filter Set Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>