force-app/main/default/objects/B25__Stored_Filter_Set_Values__c/fields/B25__Stored_Filter_Set__c.field-meta.xml
<CustomField>
    <fullName>B25__Stored_Filter_Set__c</fullName>
    <description>The filter that this record contains the values for.</description>
    <inlineHelpText>Le filtre pour lequel cet enregistrement contient les valeurs.</inlineHelpText>
    <label>Stored Filter Set</label>
    <referenceTo>B25__Stored_Filter_Set__c</referenceTo>
    <relationshipLabel>Stored Filter Set Values</relationshipLabel>
    <relationshipName>Stored_Filter_Set_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>