force-app/main/default/objects/B25__Stored_Filter_Set_Values__c/fields/B25__Stored_Values__c.field-meta.xml
<CustomField>
    <fullName>B25__Stored_Values__c</fullName>
    <description>Stores the JSON that represents the stored filter values.</description>
    <inlineHelpText>Stocke le JSON qui représente les valeurs de filtres stockées.</inlineHelpText>
    <label>Stored Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>