force-app/main/default/objects/B25__Stored_Filter_Set_Values__c/fields/B25__User__c.field-meta.xml
<CustomField>
    <fullName>B25__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user these values apply to.</description>
    <inlineHelpText>L’utilisateur auquel ces valeurs s’appliquent.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stored_Filter_Set_Values</relationshipName>
    <type>Lookup</type>
</CustomField>